Fix an error with some icons not centered correct

--- a/app/assets/stylesheets/scrivito_icon_box_widget/base.css.scss
+++ b/app/assets/stylesheets/scrivito_icon_box_widget/base.css.scss
@@ -10,9 +10,10 @@
 }
 
 .scrivito-icon-box i {
-  margin: 10px;
+  margin: 10px 0;
   font-size: 50px;
   line-height: 50px;
+  width: 100%;
   text-align: center;
 }
 
